--- a/index.html
+++ b/index.html
@@ -1,2 +1,225 @@
-# note.github.io
-My Web Hub Test 1
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>My Note</title>
+
+    <meta name="description" content="Source code generated using layoutit.com">
+    <meta name="author" content="LayoutIt!">
+
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<style type="text/css">
+		.contents{
+			margin-bottom: 1.5em;
+		}
+		dd{
+			margin-left: 2em;
+			margin-bottom: 0.5em;
+		}
+		h4{
+			margin-left:1em;
+			color: #666666;
+		}
+		li{
+			list-style:none;
+		}
+	</style>
+  </head>
+  <body>
+
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="breadcrumb">
+				<li>
+					<a href="#">HTML/CSS</a> <span class="divider">/</span>
+				</li>
+				<li>
+					JavaScript <span class="divider">/</span>
+				</li>
+				<li class="active">
+					<a href="#">Node.js</a> <span class="divider">/</span>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<h4>目录</h4>
+			<ul id="list-1">
+				<li v-for="item in items">
+					{{ item.message }}
+				</li>
+			</ul>
+		</div>
+		<div class="col-md-9">
+			<h3 class="text-left text-muted" id="title">
+				{{ message }}
+			</h3>
+			<div class="col-md-9" id="content-1">
+				<dl>
+<!-- 					<my-component v-for="item in items" :key="item.id" :title="item.title" :content="item.content"></my-component>
+<my-component2 v-for="item in items" :key="item.id" :title="item.title" :content="item.content"></my-component2> -->
+					<div v-for="item in items" :key="item.id" class="contents">
+						<dt>
+							{{ item.title }}
+						</dt>
+						<dd v-for="content in item.contents">
+							{{ content.content }}
+						</dd>
+					</div>
+				</dl>
+			</div>
+		</div>
+	</div>
+</div>
+
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
+    <script>
+    	var list1 = new Vue({
+    		el: "#list-1",
+    		data: {
+    			items: [
+    				{message: '数据类型'},
+    				{message: '函数'},
+    				{message: '标准对象'},
+    				{message: '继承'},
+    				{message: 'JSON'},
+    				{message: '浏览器对象'},
+    				{message: 'DOM操作'},
+    				{message: 'Ajax'},
+    				{message: 'Promise'},
+    				{message: 'Canvas'},
+    				{message: 'jquery'},
+    			]
+    		}
+    	})
+
+    	var title = new Vue({
+    		el: "#title",
+    		data: {
+    			message: '数据类型'
+    		}
+    	})
+
+		// var child = {
+		// 	props: ['title','content'],
+		// 	template: '<dt>{{ title }}</dt>'
+		// }
+
+		// var child2 = {
+		// 	props: ['title','content'],
+		// 	template: '<dd>{{ content }}</dd>'
+		// }
+
+		// var child3 = {
+		// 	props: ['title','content'],
+		// }
+
+		var content1 = new Vue({
+			el: '#content-1',
+			// components: {
+			// 	'my-component': child,
+			// 	'my-component2': child2,
+			// 	'my-com': child3
+			// },
+			data: {
+    			items: [
+    				{
+    					id: 1,
+    					title: 'Number',
+    					contents: [
+    								{
+    									content: 'JavaScript不区分整数与浮点数，同一用Number表示(NaN,Infinity也为Number)。',
+    								},
+    								{
+    									content: 'NaN: Not a Number / Infinity: 表示无穷大',
+    								}
+    							]
+    				},
+    				{
+    					id: 2,
+    					title: '字符串',
+    					contents: [
+    								{
+    									content: '\'\'或\"\"本身只是一种表示方式，不是字符串的一部分，因此，字符串\'abc\'只有a，b，c这3个字符。',
+    								},
+    								{
+    									content: '转义字符 \'\\\'。',
+    								}
+    							]
+    				},
+    				{
+    					id: 3,
+    					title: '布尔值',
+    					contents: [
+    								{
+    									content: 'true false ||或 &&与 !非',
+    								}
+    							]
+    				},
+    				{
+    					id: 4,
+    					title: '比较运算符',
+    					contents: [
+    								{
+    									content: '==比较，它会自动转换数据类型再比较，很多时候，会得到非常诡异的结果；而 ===比较，它不会自动转换数据类型，如果数据类型不一致，返回false，如果一致，再比较。',
+    								},
+    								{
+    									content: 'NaN与所有的值都不相等，包括它自己。唯一能判断的只有isNaN()方法//isNaN(NaN)。',
+    								},
+    								{
+    									content: '浮点数的比较：计算机无法精确的表示无限循环小数，要比较两个浮点数是否相等，只能计算它们之间的绝对值差是否小于某个值。',
+    								}
+    							]
+    				},
+    				{
+    					id: 5,
+    					title: 'null & underfined',
+    					contents: [
+    								{
+    									content: 'null 表示一个‘空’的值，与0和\'\'不同。',
+    								},
+    								{
+    									content: 'underfined表示未定义常用于判断参数是否传递的情况。',
+    								}
+    							]
+    				},
+    				{
+    					id: 6,
+    					title: 'Array',
+    					contents: [
+    								{
+    									content: 'JavaScript中的数组可以包含任意类型。推荐直接用 [] 来创建。',
+    								}
+    							]
+    				},
+    				{
+    					id: 7,
+    					title: 'Object',
+    					contents: [
+    								{
+    									content: 'JavaScript中的对象是由一组 键:值 组成的无序集合。',
+    								}
+    							]
+    				},
+    				{
+    					id: 8,
+    					title: '变量',
+    					contents: [
+    								{
+    									content: 'JavaScript中的变量不能以数字开头。',
+    								}
+    							]
+    				}
+    			]
+    		}
+		})
+    </script>
+  </body>
+</html>
