--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			methods: {
 				readContent: function () {
 					var _this = this;
-					this.$http.get("data/content1.json").then(function (res) {
+					this.$http.get("data/contentone.json").then(function (res) {
 						_this.items = res.data.result.item;
 					})
 				}
