--- a/second.html
+++ b/second.html
@@ -125,7 +125,7 @@
 			methods: {
 				readContent: function () {
 					var _this = this;
-					this.$http.get("data/contentone.json").then(function (res) {
+					this.$http.get("data/contenttwo.json").then(function (res) {
 						_this.items = res.data.result.item;
 					})
 				}
