--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<h4>目录</h4>
 			<ul id="list-1">
 				<li v-for="item in items">
-					<a href="{{ item.href }}">{{ item.message }}</a>
+					<a v-bind:src='item.href' href="{{ src }}">{{ item.message }}</a>
 				</li>
 			</ul>
 		</div>
