--- a/second.html
+++ b/second.html
@@ -57,7 +57,7 @@
 			<h4>目录</h4>
 			<ul id="list-1">
 				<li v-for="item in items">
-					{{ item.message }}
+					<a v-bind:href="item.href">{{ item.message }}</a>
 				</li>
 			</ul>
 		</div>
