--- a/second.html
+++ b/second.html
@@ -27,8 +27,10 @@
 		li{
 			list-style:none;
 		}
+		pre{
+			padding-left: 2em;
+		}
 		code{
-			margin-left: 2em;
 			font-family:"Monaco";
 			font-size: 1.5em;
 			/*font-family: "Consolas";*/
