--- a/three.html
+++ b/three.html
@@ -113,7 +113,7 @@
     	var title = new Vue({
     		el: "#title",
     		data: {
-    			message: '对象(Object)'
+    			message: '面对对象'
     		}
     	})
 		var content1 = new Vue({
